removed superfluous classes in each <section> of <main>; adjusted CSS to select .content for styling that applied to all of those sections and used those section ids in place of class name for more specific styling; reduces syntax in both HTML and CSS while increasing clarity and structure; removed .footer class and added #madeBy id to select that element for styling; fixed bug with .hero img resizing incorrectly but still have bug with gray strip between the header and the image when browser window is narrowed; added #header tag to the <h1> in header for more specific CSS selector and to clarify the element in HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1 id = "header">Hori<span id="seo">seo</span>n</h1>
         
         <nav>
             <ul>
@@ -82,8 +82,8 @@
         </section>
     </aside>
     
-    <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    <footer>
+        <h2 id = "madeBy">Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
