removed unnecessary .header class and modified CSS selector to grasp onto <header> tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- WEB PAGE HEADER -->
-    <header class="header">
+    <header>
         <h1 id = "header">Hori<span id="seo">seo</span>n</h1>
         <!-- NAV BAR IN THE HEADER -->
         <nav>
